--- a/css/modern-business.css
+++ b/css/modern-business.css
@@ -5,12 +5,12 @@
  */
 
 body {
-    padding-top: 54px;
+    padding-top: 5px; // 54px
 }
 
 @media (min-width: 992px) {
     body {
-        padding-top: 56px;
+        padding-top: 5px; //56px
     }
 }
 
