--- a/css/modern-business.css
+++ b/css/modern-business.css
@@ -107,43 +107,12 @@ footer a{
 }
 
 .footer-middle{
-    background: #f8f9fa;
+    background: #E6E7E8; /*  #f8f9fa;*/  
   padding-top: 2em;
-  color: #f09e44;
+  color: #000;
 }
 
 .footer-bottom{
   background: #ddd;
   padding: 2em;
 }
-
-
-
-
-
-
-/*! navbar test */
-// Make default navbar links display block at choosen breakpoint and adjust styles to fit...
-@media (max-width: 62em) {
-    .navbar-nav {
-        padding-top: .425rem;
-        padding-left: 0.75rem;
-    }
-    .navbar-nav .nav-item {
-        float: none;
-    }
-    .navbar-brand {
-        float: right;
-    }
-    .navbar-brand,
-    .navbar-nav .nav-item {
-        display: block;
-    }
-    .navbar-nav .nav-item + .nav-item {
-        margin-left: 0;
-    }
-    .dropdown-menu {
-        position: relative;
-        float: none;
-    }
-} 
