--- a/css/modern-business.css
+++ b/css/modern-business.css
@@ -167,6 +167,7 @@ body{padding-top:4px;}
 .portfolio-item{margin-bottom:30px;}
 p{text-align:justify;}
 img{display:block;margin:0 auto;}
+figure{display:block;margin:0 auto;}
 .bs-callout{padding:20px;margin:20px 0;border:1px solid #eee;border-left-width:5px;border-radius:3px;}
 .bs-callout h4{margin-top:0;margin-bottom:5px;}
 .bs-callout p:last-child{margin-bottom:0;}
