--- a/css/modern-business.css
+++ b/css/modern-business.css
@@ -161,9 +161,9 @@
 // }
 
 body{padding-top:4px;}
-@media (min-width:992px){body{padding-top:0px;//56px}
-}
+@media (min-width:992px){body{padding-top:0px;//56px}}
 .carousel-item{height:65vh;min-height:300px;background:no-repeat center center scroll;-webkit-background-size:cover;-moz-background-size:cover;-o-background-size:cover;background-size:cover;}
+.carousel-caption {background-color: rgba(0,0,0,.5);position: absolute;left: 0;right: 0;bottom: 0;z-index: 10;padding: 0 0 55px 25px;}
 .portfolio-item{margin-bottom:30px;}
 p{text-align:justify;}
 img{display:block;margin:0 auto;}
